--- a/index.html
+++ b/index.html
@@ -1539,23 +1539,118 @@ mark {
   
 
  
- <div id="automotivo" class="categoria">
-<h2>Automotivo</h2>
-<div class="produtos">
+ <div class="categoria" id="essencias">
+  <h2>Essências</h2>
+
+  <div class="produtos">
+
+    <div class="produto">
+      <img src="img/essencia-senamax.jpg">
+      <h3>Essência SenaMax 120ML</h3>
+      <div class="variacoes">
+        <div class="linha">
+          <span> Orquídea Negra — R$ 16,00</span>
+          <button onclick="addProduto('Orquídea Negra',16)">Adicionar</button>
+        </div>
+        <div class="linha">
+          <span> Chá Branco — R$ 16,00</span>
+          <button onclick="addProduto('Chá Branco',16)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Óleo de Eucalipto — R$ 16,00</span>
+          <button onclick="addProduto('Essência Lavanda Senamax',16)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Lavanda — R$ 16,00</span>
+          <button onclick="addProduto('Lavanda',16)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Flores de Algodão — R$ 16,00</span>
+          <button onclick="addProduto('Flores de Algodão',16)">Adicionar</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="produto">
+  <img src="img/essencia-nogueira.jpg">
+  <h3>Essência Nogueira 125ML</h3>
+
+  <div class="variacoes">
+
+    <div class="linha">
+      <span> Cereja e Avelã — R$ 10,00</span>
+      <button onclick="addProduto('Cereja e Avelã',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Lavanda — R$ 10,00</span>
+      <button onclick="addProduto('Lavanda',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Óleo de Eucalipto — R$ 10,00</span>
+      <button onclick="addProduto('Óleo de Eucalipto',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Broto de Bambu — R$ 10,00</span>
+      <button onclick="addProduto('Broto de Bambu',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Jasmin — R$ 10,00</span>
+      <button onclick="addProduto('Jasmin',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Aurora — R$ 10,00</span>
+      <button onclick="addProduto('Aurora',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Citronela — R$ 10,00</span>
+      <button onclick="addProduto('Citronela',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Alfazema — R$ 10,00</span>
+      <button onclick="addProduto('Alfazema',10)">Adicionar</button>
+    </div>
+
+    <div class="linha">
+      <span> Talco — R$ 10,00</span>
+      <button onclick="addProduto('Talco',10)">Adicionar</button>
+    </div>
+  </div>
+</div>
 
 <div class="produto">
-<img src="img/shampoo.jpg">
-<h3>Shampoo Automotivo</h3>
-<div class="variacoes">
-  <div class="linha">
-    <span>1L — R$ 13,00</spa        </div>
+      <img src="img/difusor-senamax.jpg">
+      <h3>Difusor SenaMax 250ML</h3>
+      <div class="variacoes">
+        <div class="linha">
+          <span> Orquídea Negra — R$ 22,00</span>
+          <button onclick="addProduto('Orquídea Negra',22)">Adicionar</button>
+        </div>
+        <div class="linha">
+          <span> Chá Branco — R$ 22,00</span>
+          <button onclick="addProduto('Chá Branco',22)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Pitaya — R$ 22,00</span>
+          <button onclick="addProduto('Pitaya',22)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Pistache — R$ 22,00</span>
+          <button onclick="addProduto('Pistache',22)">Adicionar</button>
+        </div>
          <div class="linha">
           <span> Lavanda — R$ 22,00</span>
           <button onclick="addProduto('Lavanda',22)">Adicionar</button>
         </div>
       </div>
     </div>
-
+    
 <div class="produto">
       <img src="img/difusor-senalar.jpg">
       <h3>Difusor SenaLar 250ML</h3>
