--- a/index.html
+++ b/index.html
@@ -1051,15 +1051,15 @@ mark {
   
 <div class="produto">
 <img src="img/veja.jpg">
-<h3>Veja Bonrruque</h3>
+<h3>Veja MultiusocBonrruque</h3>
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 13,00</span>
-    <button onclick="addProduto('Veja Bonrruque 2L',13)">Adicionar</button>
+    <button onclick="addProduto('Veja Multiuso Bonrruque 2L',13)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 25,00</span>
-    <button onclick="addProduto('Veja Bonrruque 5L',25)">Adicionar</button>
+    <button onclick="addProduto('Veja Multiuso Bonrruque 5L',25)">Adicionar</button>
   </div>
 </div>
 </div>
