--- a/index.html
+++ b/index.html
@@ -1473,6 +1473,21 @@ mark {
 </div> 
 
 <div class="produto">
+<img src="img/bucha-louca.jpg">
+<h3>Buchina de Louça</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span>Scotch Brite 4 Unid. R$ 11,00</span>
+    <button onclick="addProduto('Buchinha Scotch Brite 4 Unid.,',11)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span>Alklin R$ 1,50</span>
+    <button onclick="addProduto('Buchinha Alklin.,',1.5)">Adicionar</button>
+  </div>
+</div>
+</div>
+  
+<div class="produto">
 <img src="img/luvas-m.jpg">
 <h3>Luvas M</h3>
 <div class="variacoes">
