--- a/index.html
+++ b/index.html
@@ -567,27 +567,62 @@ mark {
   border-radius: 4px;
 }
 
-  /* BOTÃO VOLTAR AO TOPO */
-#btnTopo {
+  /* BOTÃO VOLTAR AO TOPO – DESTAQUE */
+#voltarTopo {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: #0a7cff;
-  color: #fff;
-  border: none;
-  width: 46px;
-  height: 46px;
-  border-radius: 50%;
-  font-size: 20px;
-  cursor: pointer;
-  box-shadow: 0 6px 16px rgba(0,0,0,.3);
   display: none;
-  z-index: 4000;
-  transition: transform .2s, opacity .2s;
+  align-items: center;
+  gap: 10px;
+  background: linear-gradient(180deg, #25d366, #1ebe5d);
+  color: #fff;
+  padding: 14px 18px;
+  border-radius: 40px;
+  box-shadow: 0 10px 25px rgba(37, 211, 102, 0.6);
+  cursor: pointer;
+  z-index: 3000;
+  animation: pulseTopo 1.6s infinite;
 }
 
-#btnTopo:hover {
-  transform: scale(1.1);
+#voltarTopo button {
+  background: #fff;
+  color: #25d366;
+  border: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#voltarTopo span {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+/* ANIMAÇÃO CHAMATIVA */
+@keyframes pulseTopo {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
+  }
+  70% {
+    transform: scale(1.08);
+    box-shadow: 0 0 0 14px rgba(37, 211, 102, 0);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+  }
+}
+
+  @media (max-width: 600px) {
+  #voltarTopo {
+    bottom: 80px;
+    right: 15px;
+  }
 }
 
 </style>
