--- a/index.html
+++ b/index.html
@@ -2765,10 +2765,10 @@ function voltarTopo() {
 </script>
 
   <footer class="rodape">
-  <p><strong>🌪️ Furacão da Limpeza</strong></p>
+  <p><strong>🌪️🛒 Furacão da Limpeza</strong></p>
 
   <p>
-    Fazemos entregas em <strong>toda Sorocaba</strong> 🚚💙<br>
+    Fazemos entregas por <strong>todo Sorocaba</strong> 🚚💙<br>
     Os pedidos podem ser feitos pelo nosso site ou pelo e-mail:
   </p>
 
